examples/ex3/test_cases/failing/check22_array_access_to_no_array.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    int field;

    public int func() {
        int num;

        num = field[1];

        return 0;
    }
}